--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
+		<a href="https://www.youtube.com/channel/UCf-avsUmU6-BSDuxzhoVi4g">YouTube</a> | <a href="https://github.com/chexier">GitHub</a>
+		<br>
+		<a href="index.html"><b>Home</b></a> | <a href="blog.html">Blog</a>
 		<h1>Bem vindo(a) à minha web-página!</h1>
 		<p>Meu nome é Caio, tenho 15 anos e sou de exatas.</p>
 	</body>
