add monero address

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 		<a href="index.html"><b>Home</b></a> | <a href="blog.html">Blog</a>
 		<h1>Bem vindo(a) à minha web-página!</h1>
 		<p>Meu nome é Caio, tenho 15 anos e sou de exatas.</p>
+		<br>
+		<img src="monero.png" alt="">
+		<p>Monero (XMR): 449bS27WSdbdn6Z3yRfMduW7eg9jMCmHcLyB4nYNAosyFLBneARrBUjRJ8fh81H47XekmCbQw1vD6j5sN2uTbpyDKi3a7pm</p>
 	</body>
 </html>
