--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
 	<head>
-		<title>Webpágina de Caio</title>
+		<title>Home</title>
 		<link rel="icon" type="image/x-icon" href="favicon.png">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<meta charset="utf-8">
@@ -13,7 +13,7 @@
 		<h1>Bem vindo(a) à minha web-página!</h1>
 		<p>Meu nome é Caio, tenho 15 anos e sou de exatas.</p>
 		<br>
-		<img src="monero.png" alt="">
+		<img src="pics/monero.png" alt="">
 		<p>Monero (XMR): 449bS27WSdbdn6Z3yRfMduW7eg9jMCmHcLyB4nYNAosyFLBneARrBUjRJ8fh81H47XekmCbQw1vD6j5sN2uTbpyDKi3a7pm</p>
 	</body>
 </html>
