--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
 	<head>
-		<title>Webpágina de Caio</title>
+		<title>Blog</title>
 		<link rel="icon" type="image/x-icon" href="favicon.png">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<meta charset="utf-8">
