--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!doctype html>
+<html lang="en">
 	<head>
 		<title>Blog</title>
 		<link rel="icon" type="image/x-icon" href="favicon.png">
@@ -7,13 +7,9 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<a href="https://www.youtube.com/channel/UCf-avsUmU6-BSDuxzhoVi4g">YouTube</a> | <a href="https://github.com/chexier">GitHub</a>
+		<a href="https://github.com/chexier">GitHub</a>
 		<br>
 		<a href="index.html">Home</a> | <a href="blog.html"><b>Blog</b></a>
 		<h1>2021</h1>
-		<h2>Junho</h2>
-		<h3>04</h3>
-		<h4>Começo humilde</h4>
-		<p>Olá, mundo.<p>
 	</body>
 </html>
