--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!doctype html>
+<html lang="en">
 	<head>
 		<title>Home</title>
 		<link rel="icon" type="image/x-icon" href="favicon.png">
@@ -7,13 +7,13 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<a href="https://www.youtube.com/channel/UCf-avsUmU6-BSDuxzhoVi4g">YouTube</a> | <a href="https://github.com/chexier">GitHub</a>
+		<a href="https://github.com/chexier">GitHub</a>
 		<br>
 		<a href="index.html"><b>Home</b></a> | <a href="blog.html">Blog</a>
-		<h1>Bem vindo(a) à minha web-página!</h1>
-		<p>Meu nome é Caio, tenho 15 anos e sou de exatas.</p>
+		<h1>Welcome to my personal webpage.</h1>
 		<br>
 		<img src="pics/monero.png" alt="">
 		<p>Monero (XMR): 449bS27WSdbdn6Z3yRfMduW7eg9jMCmHcLyB4nYNAosyFLBneARrBUjRJ8fh81H47XekmCbQw1vD6j5sN2uTbpyDKi3a7pm</p>
+		<img src="gifs/under_construction.gif" alt="">
 	</body>
 </html>
