add contact info & tweak index.html

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Blog</title>
+		<title>Home</title>
 		<link rel="icon" type="image/x-icon" href="favicon.png">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<meta charset="utf-8">
@@ -10,7 +10,12 @@
 		<a href="https://github.com/chexier">GitHub</a>
 		<br>
 		<a href="index.html">Home</a> | <a
-		   href="blog.html"><b>Blog</b></a> | <a href="contact.html">Contact</a>
-		<h1>2021</h1>
+		   href="blog.html">Blog</a> | <a
+		   href="contact.html"><b>Contact</b></a>
+		<h1>Contact me</h1>
+		<h3>E-mail</h3>
+		<p>My email address currently is <u>caionov08@gmail.com</u>.
+		I'll change it in a few months.</p>
+		<p>Get my GPG public key <a href="caio.key">here</a>.</p>
 	</body>
 </html>
