--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 	<body>
 		<a href="https://github.com/chexier">GitHub</a>
 		<br>
-		<a href="index.html"><b>Home</b></a> | <a href="blog.html">Blog</a>
+		<a href="index.html"><b>Home</b></a> | <a
+		   href="blog.html">Blog</a> | <a href="contact.html">Contact</a>
 		<h1>Welcome to my personal webpage.</h1>
 		<br>
+		<h3>Feel free to donate:</h3>
 		<img src="pics/monero.png" alt="">
 		<p>Monero (XMR): 449bS27WSdbdn6Z3yRfMduW7eg9jMCmHcLyB4nYNAosyFLBneARrBUjRJ8fh81H47XekmCbQw1vD6j5sN2uTbpyDKi3a7pm</p>
 		<img src="gifs/under_construction.gif" alt="">
