--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<a href="https://github.com/chexier">GitHub</a>
+		<a href="https://github.com/chexier">GitHub</a> |
+		<a href="https://sr.ht/~chexier/">sourcehut</a>
 		<br>
 		<a href="index.html">Home</a> | <a
 		   href="blog.html">Blog</a> | <a
